--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,6 +29,48 @@ jobs:
           unzip NeonSurvivor_project.zip
           ls
 
+      # 🔧 Patch app/build.gradle inside the unzipped project
+      - name: Patch app build.gradle
+        run: |
+          cat > NeonSurvivor/app/build.gradle << 'EOF'
+          apply plugin: 'com.android.application'
+          apply plugin: 'kotlin-android'
+
+          android {
+              namespace "com.example.neonsurvivor"
+              compileSdk 34
+
+              defaultConfig {
+                  applicationId "com.example.neonsurvivor"
+                  minSdk 24
+                  targetSdk 34
+                  versionCode 1
+                  versionName "1.0"
+              }
+
+              buildTypes {
+                  release {
+                      minifyEnabled false
+                      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                  }
+              }
+
+              compileOptions {
+                  sourceCompatibility JavaVersion.VERSION_17
+                  targetCompatibility JavaVersion.VERSION_17
+              }
+              kotlinOptions {
+                  jvmTarget = "17"
+              }
+          }
+
+          dependencies {
+              implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
+              implementation "androidx.core:core-ktx:1.12.0"
+              implementation "androidx.appcompat:appcompat:1.7.1"
+          }
+          EOF
+
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v3
         with:
