--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,9 +24,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip
 
+
       - name: Unzip NeonSurvivor project
         run: |
-          unzip NeonSurvivor2_project.zip -d .
+          unzip NeonSurvivor_project.zip -d .
           ls NeonSurvivor
 
       # AndroidX flags (harmless but future-proof)
