Fix artifact download URL in email notification

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,12 +35,6 @@ jobs:
           name: neon-survivor-apk
           path: NeonSurvivor/app/build/outputs/apk/debug/app-debug.apk
 
-      - name: Get artifact URL
-        id: artifact-url
-        run: |
-          ARTIFACT_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.upload-artifact.outputs.artifact-id }}"
-          echo "url=$ARTIFACT_URL" >> $GITHUB_OUTPUT
-
       - name: Send Build Notification Email
         continue-on-error: true
         uses: dawidd6/action-send-mail@v3
@@ -56,8 +50,10 @@ jobs:
           body: |
             Build #${{ github.run_number }} completed successfully!
 
-            📦 DOWNLOAD APK (one-click):
-            ${{ steps.artifact-url.outputs.url }}
+            📦 DOWNLOAD APK:
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            Click the "neon-survivor-apk" artifact to download!
 
             📝 Commit: ${{ github.sha }}
             💬 Message: ${{ github.event.head_commit.message }}
