--- a/.github/workflows/auto-fix-build.yml
+++ b/.github/workflows/auto-fix-build.yml
@@ -12,7 +12,12 @@ permissions:
 
 jobs:
   auto-fix:
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    # Only run if:
+    # 1. Build failed
+    # 2. NOT triggered by an auto-fix commit (prevent infinite loops)
+    if: |
+      github.event.workflow_run.conclusion == 'failure' &&
+      !contains(github.event.workflow_run.head_commit.message, '🤖 Auto-fix')
     runs-on: ubuntu-latest
 
     steps:
@@ -76,15 +81,41 @@ jobs:
           # This would need proper JSON parsing
           echo "Fix would be applied here"
 
+      - name: Check recent auto-fix attempts
+        id: check-attempts
+        uses: actions/github-script@v7
+        with:
+          script: |
+            // Get recent commits
+            const commits = await github.rest.repos.listCommits({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              per_page: 10
+            });
+
+            // Count auto-fix commits in last 10
+            const autoFixCount = commits.data.filter(c =>
+              c.commit.message.includes('🤖 Auto-fix')
+            ).length;
+
+            if (autoFixCount >= 3) {
+              core.setFailed('Too many auto-fix attempts (3+). Manual intervention required.');
+              return false;
+            }
+            return true;
+          result-encoding: string
+
       - name: Commit and push fix
+        if: steps.check-attempts.outputs.result == 'true'
         run: |
           git config user.name "claude-auto-fix[bot]"
           git config user.email "autofix@claude.ai"
           git add .
-          git commit -m "🤖 Auto-fix build failure" || exit 0
+          git commit -m "🤖 Auto-fix build failure [attempt]" || exit 0
           git push
 
       - name: Comment on commit
+        if: steps.check-attempts.outputs.result == 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -93,4 +124,17 @@ jobs:
               repo: context.repo.repo,
               commit_sha: context.sha,
               body: '🤖 Build failure auto-fixed by Claude'
+            })
+
+      - name: Create issue if max attempts reached
+        if: steps.check-attempts.outputs.result != 'true'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: '🚨 Auto-fix failed after 3 attempts',
+              body: 'The build has failed multiple times and auto-fix could not resolve it.\n\nManual intervention required.\n\nFailed run: ${{ github.event.workflow_run.html_url }}',
+              labels: ['bug', 'auto-fix-failed', 'urgent']
             })
